Add fallback icon to work around https://bugzilla.gnome.org/show_bug.cgi?id=629878 Patch adapted from Fedora.